# CAPEv2

./: .actrc  .dockerignore  .gitignore  .gitignore.save  .gitmodules  .pre-commit-config.yaml  .readthedocs.yaml  .yara-ci.yml  CITATION.cff  Intezer.md  LICENSE  MCP.md  README.md  SECURITY.md  SKILLS.md  TTPs.conf  acknowledgment.md  cape2.sh  changelog.md  cuckoo.py  cuckoo.pyproj  cuckoo.sln  docker-compose.yml  intezer_cape2.sh  kvm-qemu.sh  pyproject.toml  pytest.ini  report.html  requirements.github.txt  requirements.in  requirements.offline.txt  requirements.tests.in  requirements.txt  supervisor.conf  test_analyzer_logic.py  汉化.md
.gemini/: config.yaml  settings.json
.github/: copilot-instructions.md  issue_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: .yara-ci.yml  antitemplaters.yml  antitemplaters.yml_disabled  auto_answer.yml  cape_sh.yml  codeql-analysis.yml  docker-image.yml  export-requirements.yml  fix-lock.yml  pip-audit.yml  pytest.yaml  python-package-windows.yml  python-package.yml  todo.yml  yara-audit.yml  yara_format.yaml
KnowledgeBaseBot/: all_texts.json  all_texts.pkl  auto_answer.yml  auto_answer_bot.py  build_knowledge_base.py  kb_state.json  kb_state.pkl  metadata.json  metadata.pkl  readme.md  requirements.txt  unified_index.faiss
admin/: admin.py  admin_conf.py_example
agent/: agent-flask-test.py  agent.py  agent_flask.py  pytest.ini  readme.md  test_agent.py  test_agent_flask.py  test_python_architecture.py
black_formatter/: README.md  blackd_push.py  requirements.in  requirements.pip-compile.txt
conf/: api.conf  auxiliary.conf  auxiliary.conf.default  aws.conf  aws.conf.default  az.conf  az.conf.default  backup_processing.conf  copy_configs.sh  cuckoo.conf  cuckoo.conf.default  cuckoomx.conf  distributed.conf  esx.conf  externalservices.conf  hosts.conf.default  kvm.conf  kvm.conf.default  kvmremote.conf  logging.conf.default  malheur.conf  malheur.conf.default  memory.conf  midmemory.conf  physical.conf  physical.conf.default  processing.conf  processing.conf.default  proxmox.conf  proxmox.conf.default  proxmoxVMs.conf.default  qemu.conf  readme.md  reporting.conf  reporting.conf.default  routing.conf  routing.conf.default  selfextract.conf  selfextract.conf.default  smtp_sinkhole.conf  (+8 more)
custom/: .gitignore  README.md
data/: .gitignore  capemon_pb.proto  dnsbl.py  family_detection_names.py  google_creds.json  maec_api_call_mappings.json  malpedia.json  malpedia.py  mbc.json  replacepatterns.py
dev_utils/: elasticsearchdb.py  mongo_async.py  mongo_hooks.py  mongo_provider.py  mongodb.py  readme.md  trim_ole.py
docker/: .env.example  Dockerfile  docker-compose.yml  install.sh  pcap.sh  readme.md  run.sh
docs/: MULTITENANCY-SUPPORT.md  filetype_vm_setup.md  nginx.md  requirements.txt  开发.md
extra/: buildvswitch.sh  cape-fluentd.conf  libvirt_installer.sh  linux_agent.sh  optional_dependencies.txt  poetry_libvirt_installer.sh  poetry_yara_installer.sh  poetry_yara_python_installer.sh  whitelist_cidrs.txt  whitelist_domains.txt  whitelist_ips.txt  yara_installer.sh
guac-session/: Changelog.md  LICENSE  README.md  manage.py  pyproject.toml  rundev  runprod  sample.env
guac-session/extra/: fstab.in  nginx-site-config.txt
guac-session/guac/: consumers.py  urls.py  views.py
guac-session/guac-session/: asgi.py  settings.py  urls.py  wsgi.py
guac-session/guac/templates/guac/: playback.html
installer/: README.md  cape-config.sh.example  cape2.sh  choco.bat  disable_win7noise.bat  kvm-qemu.sh  suricata_from_source.sh  win10_disabler.ps1
mcp/: filters.py  server.py
private/: README.md
systemd/: README.md  cape-dist.service  cape-fstab.service  cape-openvpn.service  cape-processor.service  cape-pubsub.service  cape-rooter.service  cape-sigma-update.service  cape-sigma-update.timer  cape-web.service  cape.service  cape.service.app  cuckoo-processor.service  cuckoo-rooter.service  cuckoo-wsgi.service  cuckoo.service  guac-web.service  guacd.service  suricata-update.service  suricata-update.timer  suricata.service
tests/: _prefork_engine_subproc.py  abstracts_tests.py  colors_tests.py  config_tests.py  conftest.py  database_tests.py  email_test.py  email_utils_tests.py  grab_samples.py  integrity.py  objects_tests.py  processor_tests.py  readme.md  reporter_tests.py  sniffer_tests.py  tcr_misc.py  tenancy_vectors.py  test_abstracts.py  test_analysis_manager.py  test_analysisinfo_source_url.py  test_analyzer_logic.py  test_aplib.py  test_artifact_jobid.py  test_autoprocess_yara_prewarm.py  test_behavior.py  test_bson.bson  test_cape_utils.py  test_central_guac_jobid.py  test_central_mode.py  test_cleaners_utils.py  test_colors.py  test_compressor.py  test_config.py  test_database.py  test_deduplication_qr.py  test_demux.py  test_dist_db.py  test_downloaders.py  test_extractor_pool_teardown.py  test_file_extra_info.py  (+49 more)
tests_parsers/: readme.md  test_agenttesla.py  test_asyncrat.py  test_aurorastealer.py  test_blackdropper.py  test_bumblebee.py  test_carbanak.py  test_cobaltstrikebeacon.py  test_darkgate.py  test_icedid.py  test_koiloader.py  test_latrodectus.py  test_lumma.py  test_nanocore.py  test_njrat.py  test_oyster.py  test_pikabot.py  test_qakbot.py  test_quickbind.py  test_redline.py  test_smokeloader.py  test_snake.py  test_sparkrat.py  test_stealc.py  test_zloader.py
utils/: admin.py  api.py  cleaner.py  cleaners.py  clone-machines.py  clone_machines.py  community.py  community_blocklist.py  create_bloom.py  cuckoomx.py  dedup.py  delete_range.py  dist.py  down.py  download_parsers.py  download_yara.py  email_test.py  fstab.py  fypj.json  gcp_pubsub_service.py  intezer-signatures.py  intezer_signatures.py  linux_mktaps.sh  listdump.py  machine.py  pcap.py  procesing_statistics.py  process.py  profiling.py  proxy2cape.py  rooter.py  route.py  router_manager.py  sample_path.py  similarity_diag.py  smtp_sinkhole.py  smtp_sinkhole.sh  stats.py  submit.py  suricata.sh  (+9 more)
uwsgi/: cape.conf  cape.ini  capedist.ini
web/: conftest.py  forms.py  manage.py  mcp_server.py  mt_test_fixtures.py
(+3550 files in other folders)
