[tool.poetry]
name = "CAPEv2"
version = "0.1.0"
description = "CAPE: Malware Configuration And Payload Extraction"
authors = ["Kevin O'Reilly <kev@capesandbox.com>", "doomedraven <doomedraven@capesandbox.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
alembic = "1.9.4"
gevent = "23.9.1"
greenlet = "3.0.0rc3"
Pebble = "4.6.3"
# pymisp = "2.4.144"
cryptography = "42.0.4"
requests = {version = "2.31.0", extras = ["security", "socks"]}
pyOpenSSL = "24.0.0"
pefile = "*"
dnfile="0.14.1"
tldextract = "3.5.0"
oletools = "0.60"
olefile = "0.46"
# mixbox = "1.0.5"
capstone = "4.0.2"
pycryptodomex = "3.19.1"
# xmltodict = "0.12.0"
requests-file = "1.5.1"
orjson = "3.9.15"
# maec = "4.1.0.17"
regex = "2021.7.6"
SFlock2 = {version = "0.3.57", extras = ["shellcode"]}
# volatility3 = "2.0.0"
# XLMMacroDeobfuscator = "0.2.7"
pyzipper = "0.3.5"
flare-capa = "7.0.1"
Cython = "0.29.24"
# pyre2 = "0.3.6" # Dead for python3.11
Django = "4.2.10"
SQLAlchemy = "1.4.50"
SQLAlchemy-Utils = "0.41.1"
Jinja2 = "^3.1.3"
chardet = "4.0.0"
pygal = "2.4.0"
dpkt = "1.9.6"
dnspython = "2.1.0"
pytz = "2021.1"
maxminddb = "2.5.1"
Pillow = ">=8.2.0"
python-whois = "0.7.3"
bs4 = "0.0.1"
pydeep2 = "0.5.1"
django-recaptcha = "3.0.0"  # https://pypi.org/project/django-recaptcha/
django-crispy-forms = "1.14.0"
django-settings-export = "1.2.1"
django-csp = "3.7"
django-extensions = "3.2.1"
django-ratelimit = "3.0.1"
# qrcode = "7.2"
python-tlsh = "4.5.0"
djangorestframework = "3.14.0"
yara-python = "4.3.1"
netstruct = "1.1.2"
pymongo = ">=4.0.1"
psutil = "5.8.0"
# ImageHash = "4.3.1"
LnkParse3 = "1.2.0"
cachetools = "^5.3.0"
django-allauth = "0.54.0"  # https://django-allauth.readthedocs.io/en/latest/configuration.html
# socks5man = {git = "https://github.com/CAPESandbox/socks5man.git", rev = "7b335d027297b67abdf28f38cc7d5d42c9d810b5"}
# httpreplay = {git = "https://github.com/CAPESandbox/httpreplay.git", rev = "0d5a5b3144ab15f93189b83ca8188afde43db134"}
# bingraph = {git = "https://github.com/CAPESandbox/binGraph.git", rev = "552d1210ac6770f8b202d0d1fc4610cc14d878ec"}
psycopg2-binary = "^2.9.5"
ruff = "0.0.290"
paramiko = "3.4.0"

Werkzeug = "3.0.1"
packaging = "23.1"
setuptools = "69.0.1"
# command line config manipulation
crudini = "0.9.4"
python-dateutil = "2.8.2"

# guac-session
pyguacamole = "^0.11"
uvicorn = {extras = ["standard"], version = "^0.18.2"}
gunicorn = "^20.1.0"
channels = "^3.0.5"
setproctitle = "1.3.2"

# tmp dependency to fix vuln
certifi = "2023.07.22"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.10.1"
pytest = "7.2.0"
pytest-pretty = "1.1.0"
pytest-cov = "3.0.0"
pytest-mock = "3.7.0"
pytest-django = "4.5.2"
pytest_asyncio = "0.18.3"
pytest-xdist = "3.0.2"
pytest-asyncio = "0.18.3"
tenacity = "8.1.0"
httpretty = "^1.1.4"
func-timeout = "^4.3.5"
pre-commit = "^2.19.0"

[tool.ruff]
select = ["E", "F"]
ignore = ["E402","E501"]
exclude = [
    "./analyzer/linux/dbus_next",
]

[tool.black]
line-length = 132
include = "\\.py(_disabled)?$"

[tool.isort]
profile = "black"
no_lines_before = ["FUTURE", "STDLIB"]
line_length = 132
supported_extensions = ["py", "py_disabled"]

[tool.flake8]
max-line-length = 132
exclude = ".git,__pycache__,.cache,.venv"

[tool.pytest.ini_options]
django_find_project = false
DJANGO_SETTINGS_MODULE = "web.settings"
pythonpath = [".", "web"]
testpaths = ["tests", "agent"]
norecursedirs = "tests/zip_compound"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
